[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
html5ever = "*"
cssparser = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
markup5ever_rcdom = "0.2.0"
url = "2.3.1"
vulkano = "0.31.0"
winit = "0.27.3"
vulkano-win = "0.31.0"
bytemuck = "1.13.1"
vulkano-shaders = "0.31.0"
